Replaced added code w/ class benefits div, moved margin away from class benefits to resolve spacing issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,11 +84,11 @@ main {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    margin-bottom: 32px;
     color: #ffffff;
 }
  
-.benefits {
+.benefits div{
+    margin-bottom: 32px;
 } 
 
 /* .benefit-brand {
@@ -104,7 +104,7 @@ main {
 h3 {
     margin-bottom: 10px;
     text-align: center;
-    margin-top: 32px;
+   
 
 }
 
